Testing fetching data from website

--- a/BFDI_BRAWL/.vscode/settings.json
+++ b/BFDI_BRAWL/.vscode/settings.json
@@ -1,4 +1,4 @@
-﻿{
+{
     "files.exclude":
     {
         "**/.DS_Store":true,
@@ -52,5 +52,10 @@
         "ProjectSettings/":true,
         "temp/":true,
         "Temp/":true
-    }
+    },
+    "editor.cursorBlinking": "smooth",
+    "editor.cursorSmoothCaretAnimation": true,
+    "workbench.list.smoothScrolling": true,
+    "editor.smoothScrolling": true,
+    "editor.fontFamily": "'SpaceMono Nerd Font'"
 }
