Rudimentary Main Menu

--- a/BFDI_BRAWL/.vscode/settings.json
+++ b/BFDI_BRAWL/.vscode/settings.json
@@ -56,6 +56,5 @@
     "editor.cursorBlinking": "smooth",
     "editor.cursorSmoothCaretAnimation": true,
     "workbench.list.smoothScrolling": true,
-    "editor.smoothScrolling": true,
-    "editor.fontFamily": "'SpaceMono Nerd Font'"
+    "editor.smoothScrolling": true
 }
